# compiler

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
codegen/: Cargo.toml
codegen/src/: call_graph.rs  codegen.rs  lib.rs  templates.rs
common/: Cargo.toml
common/src/: control_flow_graph.rs  lib.rs  scope_map.rs  symbol.rs
compiler/: Cargo.toml
compiler/src/: lib.rs
db/: Cargo.toml
db/src/: lib.rs
diagnostics/: Cargo.toml
diagnostics/src/: error.rs  lib.rs  result.rs
evaluate/: Cargo.toml
evaluate/src/: lib.rs  stack.rs  value.rs
fixtures/: main.output.js  main.ws  network.ws  output.js
fixtures/layout/: core.ws
fixtures/output/: app.compiled.js  index.html  index.js  package.json
fixtures/output/.parcel-cache/: 1efb5cd19f6f05a4  2513ab81beed8c12.txt  40277edf06771cdc  408ea8bba95a8e84  41af933389dc90b3  57d7460428425cc5  5d102dff0a3f4e7e  84b5460432e2180f  8e082a61650b1cdc.txt  8ec8b337af6fb088  lock.mdb  (+7 more)
fixtures/utilities/: log.ws
lexer/: Cargo.toml
lexer/src/: lexer.rs  lib.rs  token_stream.rs
lsp/: Cargo.toml
lsp/extension/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
lsp/extension/syntaxes/: webscript.tmLanguage.json
lsp/src/: main.rs
parser/: Cargo.toml
parser/src/: control_flow.rs  evaluate.rs  lib.rs  parser.rs  parser_.rs  test_utils.rs
parser/tests/: cfg_snapshots.rs
parser/tests/snapshots/: cfg_snapshots__deeply nested if statements, interleaved normal flow statements, early return.snap  cfg_snapshots__deeply nested if statements, interleaved normal flow statements.snap  cfg_snapshots__deeply nested if statements.snap  cfg_snapshots__if statement, early return.snap  cfg_snapshots__if statement, leading statements, early return.snap  cfg_snapshots__multiple if__else-if statements.snap  cfg_snapshots__multiple statement, no control flow.snap  cfg_snapshots__multiple statements, early return (dead code).snap  cfg_snapshots__multiple statements, no control flow, return at end.snap  cfg_snapshots__nested empty if statements.snap  cfg_snapshots__nested if statements with deep return.snap  cfg_snapshots__nested if statements, leading and trailing statements.snap  cfg_snapshots__nested if statements.snap  cfg_snapshots__nested if__else statements, leading and trailing statements.snap  cfg_snapshots__nested if__else statements.snap  cfg_snapshots__nested if__else, early return (dead code).snap  cfg_snapshots__nested if__else-if statements, early return (dead code).snap  cfg_snapshots__nested if__else-if statements.snap  cfg_snapshots__single if statement, multiple leading statements.snap  cfg_snapshots__single if statement, multiple trailing statements.snap  cfg_snapshots__single if statement, single leading statement.snap  cfg_snapshots__single if statement, single trailing statement.snap  cfg_snapshots__single if statement.snap  cfg_snapshots__single if statement.snap.new  cfg_snapshots__single if__else statement, full multiple statement early return (dead code).snap  cfg_snapshots__single if__else statement, full single statement early return (dead code).snap  cfg_snapshots__single if__else statement, leading and trailing statements.snap  cfg_snapshots__single if__else statement, leading statements.snap  cfg_snapshots__single if__else statement, partial multiple statement early return.snap  cfg_snapshots__single if__else statement, partial single statement early return.snap  cfg_snapshots__single if__else statement, trailing statements.snap  cfg_snapshots__single if__else statement.snap  cfg_snapshots__single if__else-if statement, early return (dead code).snap  cfg_snapshots__single if__else-if statement, without else block, early return.snap  cfg_snapshots__single if__else-if statement, without else block.snap  cfg_snapshots__single if__else-if statement.snap  cfg_snapshots__single long if__else-if statement.snap  cfg_snapshots__single return statement.snap  cfg_snapshots__single statement, no control flow.snap  cfg_snapshots__single while statement, leading statement.snap  (+2 more)
session/: Cargo.toml
session/src/: lib.rs  session.rs
syntax/: Cargo.toml
syntax/src/: arena.rs  ast.rs  ast_.rs  lib.rs  precedence.rs  span.rs  symbol.rs  token.rs  visit.rs  visit_.rs
types/: Cargo.toml
types/src/: types.rs
vfs/: Cargo.toml
vfs/src/: lib.rs
