[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.11"
indoc = "1.0.7"
chrono = "0.4.22"
diagnostics = { path = "../diagnostics" }
syntax = { path = "../syntax" }
common = { path = "../common" }
evaluate = { path = "../evaluate" }
petgraph = "0.6.0"