[package]
name = "compiler"
version = "0.1.0"
authors = ["Brandon Dail <brandon@dail.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
async-std = "1.6.3"
jwalk = "0.5.1"
salsa = "0.17.0-pre.1"
diagnostics = { path = "../diagnostics" }
lexer = { path = "../lexer" }
session = { path = "../session" }
vfs = { path = "../vfs" }
db = { path = "../db" }
