[package]
name = "db"
version = "0.1.0"
authors = ["Brandon Dail <brandon@dail.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
salsa = "0.17.0-pre.1"
diagnostics = { path = "../diagnostics" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
syntax = { path = "../syntax" }
session = { path = "../session" }
codegen = { path = "../codegen" }
vfs = { path = "../vfs" }