[package]
name = "lexer"
version = "0.1.0"
authors = ["Brandon Dail <brandon@dail.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = { path = "../syntax" }
session = { path = "../session" }
vfs = { path = "../vfs" }
salsa = "0.15.2"
diagnostics = { path = "../diagnostics" }
common = { path = "../common" }
unicode-segmentation = "1.6.0"
unicode-xid = "0.2.1"
log = "0.4.11"