[package]
name = "lsp"
version = "0.1.0"
authors = ["Brandon Dail <brandon@dail.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.3.4"
lsp-types = { version = "0.79.0", features = ["proposed"] }
serde_json = "1.0"
flexi_logger = "0.15.12"
log = "0.4.11"
