[package]
name = "parser"
version = "0.1.0"
authors = ["Brandon Dail <brandon@dail.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lexer = { path = "../lexer" } 
syntax = { path = "../syntax" }
diagnostics = { path = "../diagnostics" }
types = { path = "../types" }
vfs = { path = "../vfs" }
salsa = "0.17.0-pre.1"
log = "0.4.11"
id-arena = "2.2.1"
common = { path = "../common" }
edit-distance = "2.1.0"
