[package]
name = "syntax"
version = "0.1.0"
authors = ["Brandon Dail <brandon@dail.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostics = { path = "../diagnostics" }
common = { path = "../common" }
types = { path = "../types" }
id-arena = "2.2.1"
